--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Savaged.BlackNotepad.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="OnApplicationStartup">
+             Startup="OnApplicationStartup" Exit="Application_Exit">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
