--- a/src/Views/MainWindow.xaml
+++ b/src/Views/MainWindow.xaml
@@ -155,7 +155,8 @@
                 <ItemsPanelTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
@@ -164,16 +165,20 @@
                 </ItemsPanelTemplate>
             </StatusBar.ItemsPanel>
             <StatusBarItem Grid.Column="0">
+                <TextBlock Text="Modified" 
+                           Visibility="{Binding SelectedItem.IsDirty, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            </StatusBarItem>
+            <StatusBarItem Grid.Column="1">
                 <TextBlock Text="Busy..." 
                            Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}"/>
             </StatusBarItem>
-            <StatusBarItem Grid.Column="1">
+            <StatusBarItem Grid.Column="2">
                 <TextBlock Text="{Binding SelectedItem.LineEnding, Converter={StaticResource LineEndingConverter}}"/>
             </StatusBarItem>
-            <StatusBarItem Grid.Column="2">
+            <StatusBarItem Grid.Column="3">
                 <TextBlock Text="{Binding CaretPosition, Converter={StaticResource CoordsConverter}}"/>
             </StatusBarItem>
-            <StatusBarItem Grid.Column="3">
+            <StatusBarItem Grid.Column="4">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="{Binding ViewState.SelectedFontZoom.Zoom}"/>
                     <TextBlock>%</TextBlock>
